--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,10 @@
     "tuple": "cpp",
     "type_traits": "cpp",
     "typeinfo": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "__functional_03": "cpp",
+    "__functional_base_03": "cpp",
+    "__memory": "cpp",
+    "memory_resource": "cpp"
   }
 }
