--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,11 @@
     "__functional_03": "cpp",
     "__functional_base_03": "cpp",
     "__memory": "cpp",
-    "memory_resource": "cpp"
+    "memory_resource": "cpp",
+    "*.tcc": "cpp",
+    "clocale": "cpp",
+    "numeric": "cpp",
+    "random": "cpp",
+    "fstream": "cpp"
   }
 }
